spacing + small fixes

--- a/src/pages/registration.css
+++ b/src/pages/registration.css
@@ -1,91 +1,107 @@
-*{
+* {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
- }
+}
 
 .navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-right: 10px;
-    border-bottom: 0.5px solid #d3d3d3;
-  }
-  
-  .line {
-    width: 0.5px;
-    height: 80px;
-    background-color: #d3d3d3;
-  }
-  
-  .header-img {
-    max-width: 130px;
-    margin-right: 10px;
-    height: 80px;
-  }
-  
-  .images{
-    display: flex;
-    align-items: left;
-    max-width: 500px;
-  }
-  
-  .button {
-    background-color: white; 
-    color: #abc99d; 
-    border: solid #abc99d;
-    padding: 13px 29px;
-    text-align: center;
-    font-weight: bold;
-    font-size: 14px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    float: right;
-    border-radius: 0%;
-  }
-    
-  .button:hover {
-    background-color: #abc99d;
-    color: white;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-right: 10px;
+  border-bottom: 0.5px solid #d3d3d3;
+}
 
-  footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #e6d1be;
-    text-align: center;
-  }
+.line {
+  width: 0.5px;
+  height: 80px;
+  background-color: #d3d3d3;
+}
 
-  .custom-btn {
-    width: 262px;
-    font-size: 18px;
-  }
+.header-img {
+  max-width: 130px;
+  margin-right: 10px;
+  height: 80px;
+}
 
-  .register-left {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.images {
+  display: flex;
+  align-items: left;
+  max-width: 500px;
+}
 
-  .register-right {
-    align-items: center;
-    justify-content: center;
-  }
+.button {
+  background-color: white;
+  color: #abc99d;
+  border: solid #abc99d;
+  padding: 13px 29px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 14px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  float: right;
+  border-radius: 0%;
+}
 
-  input[type="text"],
-  input[type="email"],
-  input[type="password"] {
-    max-width: 300px; 
-  }
+.button:hover {
+  background-color: #abc99d;
+  color: white;
+}
 
-  .form-input {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
+.custom-btn {
+  width: 300px;
+  font-size: 18px;
+}
+
+.register-left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.register-right {
+  align-items: center;
+  justify-content: center;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  max-width: 300px;
+}
+
+.form-input {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+}
+
+.container-fluid {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer {
+  background-color: #e6d1be;
+  text-align: center;
+  padding: 10px;
+  margin-top: auto;
+}
+
+.border {
+  border: 2px solid #000;
+}
